[metadata]
name = ratelimiter-redis
version = attr: ratelimiteredis.__version__
description = An async ratelimiter using aioredis
license = GPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = PredaaA (Predä 。#1001)
url = https://github.com/PredaaA/ratelimiter-redis
project_urls =
    Issue Tracker = https://github.com/PredaaA/ratelimiter-redis/issues
    Source Code = https://github.com/PredaaA/ratelimiter-redis
classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 2 - Pre-Alpha
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
include_package_data = False
packages = find_namespace:
python_requires = >=3.7
install_requires =
    aioredis>=1.3.1

[options.extras_require]
style =
    black==19.10b0

[options.packages.find]
include =
    ratelimiteredis
